samples/_failures_safe/1761543474_cf42b5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c764f7a1.c: In function ‘main’:
./samples/SAFE/__tmp_c764f7a1.c:142:20: error: expected ‘;’ at end of input
  142 |         buffer_free
      |                    ^
      |                    ;
./samples/SAFE/__tmp_c764f7a1.c:142:9: error: expected declaration or statement at end of input
  142 |         buffer_free
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_c764f7a1.c:142:9: error: expected declaration or statement at end of input
